[WTF] HashTable<Ref<K>, V>::HashTable(const HashTable& other) can't compile https://bugs.webkit.org/show_bug.cgi?id=215550

Reviewed by Darin Adler.

Source/WTF:

Even though the copy constructor takes a const HashTable
reference, RefHashTraits::assignToEmpty takes non-const Ref<P>. It
seems that RefHashTraits::assignToEmpty and
Ref::assignToHashTableEmptyValue are unnecessary. Just remove them.

* wtf/HashTraits.h:
(WTF::RefHashTraits::assignToEmpty): Deleted.
* wtf/Ref.h:
(WTF::Ref::assignToHashTableEmptyValue): Deleted.

Tools:

* TestWebKitAPI/Tests/WTF/HashSet.cpp:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/228340@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265773 268f45cc-cd09-0410-ab3c-d52691b4dbfc